--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI='mongodb+srv://trantanthanh2k3lop12:IACcswuNmRiIb6pf@streaming.jfzygac.mongodb.net/?retryWrites=true&w=majority&appName=Streaming'
 PORT = 3000
-
+JWT_SECRET = 'codingduo'
