feat: add api verify-otp, login, forgot-password, reset-password

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI='mongodb+srv://trantanthanh2k3lop12:IACcswuNmRiIb6pf@streaming.jfzygac.mongodb.net/?retryWrites=true&w=majority&appName=Streaming'
 PORT = 3000
-
+JWT_SECRET='codingduo'
+MAIL_USER = 'trantanthanh2k3lop12@gmail.com'
+MAIL_PASS = 'lursootuiwigznqu'
