feat: send message api

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT = 3000
 JWT_SECRET='codingduo'
 MAIL_USER = 'trantanthanh2k3lop12@gmail.com'
 MAIL_PASS = 'lursootuiwigznqu'
+ORIGIN='http://localhost:5173'
