feat: migrate to cloud redis

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ IMG_LINK = 'http://localhost:3000'
 ORIGIN='http://localhost:5173'
 LIVEKIT_API_KEY='APIgX6BWYw5gJpm'
 LIVEKIT_API_SECRET='AODAVoGgRV5qvVJQ4ZhkW1bTSm2QAZqfq9R5lgLYHfJ'
+REDIS_HOST='redis-14563.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com'
+REDIS_PASSWORD='zyd1UmJ61hIKPDBqHxnssXxomlVV6uqz'
