feat: intergate cloudinary

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ LIVEKIT_API_KEY='APIgX6BWYw5gJpm'
 LIVEKIT_API_SECRET='AODAVoGgRV5qvVJQ4ZhkW1bTSm2QAZqfq9R5lgLYHfJ'
 REDIS_HOST='redis-14563.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com'
 REDIS_PASSWORD='zyd1UmJ61hIKPDBqHxnssXxomlVV6uqz'
+CLOUDINARY_CLOUD_NAME='de75j42r0'
+CLOUDINARY_API_KEY='417689191792585'
+CLOUDINARY_API_SECRET='q9y1KXHnETHXWSYhiodn6_55WLs'
