feat: follow api, fix: profile images

--- a/.env
+++ b/.env
@@ -3,7 +3,10 @@ PORT = 3000
 JWT_SECRET='codingduo'
 MAIL_USER = 'trantanthanh2k3lop12@gmail.com'
 MAIL_PASS = 'lursootuiwigznqu'
-IMG_LINK = 'http://localhost:3000'
+DEFAULT_PROFILE_PICTURE_PUBLIC_ID = 'user_q3mvrt'
+DEFAULT_PROFILE_PICTURE_URL = 'https://res.cloudinary.com/de75j42r0/image/upload/v1718001871/user_q3mvrt.png'
+DEFAULT_PROFILE_BANNER_PUBLIC_ID = 'user_o3cooa'
+DEFAULT_PROFILE_BANNER_URL = 'https://res.cloudinary.com/de75j42r0/image/upload/v1718002381/user_o3cooa.png'
 ORIGIN='http://localhost:5173'
 LIVEKIT_API_KEY='APIgX6BWYw5gJpm'
 LIVEKIT_API_SECRET='AODAVoGgRV5qvVJQ4ZhkW1bTSm2QAZqfq9R5lgLYHfJ'
