--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ REDIS_PASSWORD='zyd1UmJ61hIKPDBqHxnssXxomlVV6uqz'
 CLOUDINARY_CLOUD_NAME='de75j42r0'
 CLOUDINARY_API_KEY='417689191792585'
 CLOUDINARY_API_SECRET='q9y1KXHnETHXWSYhiodn6_55WLs'
+S3_ACCESS_KEY='AKIAW3MD7LWM47C2TJHR'
+S3_SECRET_KEY='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'
+S3_BUCKET_NAME='duo-streaming'
