--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
+    "livekit-client": "^2.2.0",
     "livekit-server-sdk": "^2.4.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
