--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemailer-express-handlebars": "^6.1.2",
     "redis": "^4.6.14",
     "socket.io": "^4.7.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
