--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redis": "^4.6.14",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "winston-syslog": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
